// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CarouselNext /> by default on desktop matches with snapshot 1`] = `
<div
  className="sc-dkzDqf kIdGjF k-CarouselNext"
  style={
    Object {
      "--carousel-gapBase": "2.5rem",
      "--carousel-itemsPerPage": 3,
      "--carousel-pagesCount": 0,
      "--carousel-shadowSize": "1.25rem",
    }
  }
>
  <div
    className="k-CarouselNext__inner"
    onKeyDown={[Function]}
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  />
</div>
`;

exports[`<CarouselNext /> by default on mobile matches with snapshot 1`] = `
<div
  className="sc-dkzDqf kIdGjF k-CarouselNext"
  style={
    Object {
      "--carousel-gapBase": "2.5rem",
      "--carousel-itemsPerPage": 3,
      "--carousel-pagesCount": 2,
      "--carousel-shadowSize": null,
    }
  }
>
  <div
    className="k-CarouselNext__inner"
    onKeyDown={[Function]}
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-CarouselNext__inner__pageContainer custom-class k-CarouselNext__inner__pageContainer--isActivePage k-CarouselNext__inner__pageContainer--hasBeenViewed"
    >
      <div
        className="k-CarouselNext__page k-CarouselNext__page--isActivePage k-CarouselNext__page--hasBeenViewed"
      >
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                The Office, la série culte décortiquée par S!CK
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--success k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten-1.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                Pellentesque ornare sem lacinia quam venenatis vestibulum.
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                The Office, la série culte décortiquée par S!CK
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="k-CarouselNext__inner__pageContainer custom-class"
    >
      <div
        className="k-CarouselNext__page"
      >
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--success k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten-1.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                Pellentesque ornare sem lacinia quam venenatis vestibulum.
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                The Office, la série culte décortiquée par S!CK
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--success k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten-1.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                Pellentesque ornare sem lacinia quam venenatis vestibulum.
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Page 2"
        className="k-u-reset-button k-CarouselNext__inner__button"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`<CarouselNext /> empty carousel matches with snapshot 1`] = `null`;

exports[`<CarouselNext /> with exportVisibilityProps prop matches with snapshot 1`] = `
<div
  className="sc-dkzDqf kIdGjF k-CarouselNext"
  style={
    Object {
      "--carousel-gapBase": "2.5rem",
      "--carousel-itemsPerPage": 3,
      "--carousel-pagesCount": 2,
      "--carousel-shadowSize": null,
    }
  }
>
  <div
    className="k-CarouselNext__inner"
    onKeyDown={[Function]}
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="k-CarouselNext__inner__pageContainer k-CarouselNext__inner__pageContainer--isActivePage k-CarouselNext__inner__pageContainer--hasBeenViewed"
    >
      <div
        className="k-CarouselNext__page k-CarouselNext__page--isActivePage k-CarouselNext__page--hasBeenViewed"
      >
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                The Office, la série culte décortiquée par S!CK
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--success k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten-1.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                Pellentesque ornare sem lacinia quam venenatis vestibulum.
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                The Office, la série culte décortiquée par S!CK
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="k-CarouselNext__inner__pageContainer"
    >
      <div
        className="k-CarouselNext__page"
      >
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--success k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten-1.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                Pellentesque ornare sem lacinia quam venenatis vestibulum.
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                The Office, la série culte décortiquée par S!CK
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="k-CarouselNext__page__item"
        >
          <div
            className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--success k-ProjectCard--colorMode-light"
            onFocus={[Function]}
          >
            <div
              className="k-ProjectCard__image"
            >
              <img
                alt="image alt"
                className="k-ProjectCard__image__image"
                src="kitten-1.jpg"
              />
            </div>
            <div
              className="k-ProjectCard__content"
            >
              <div
                className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
              >
                Prolongation
              </div>
              <h1
                className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                style={
                  Object {
                    "--Title-css-color": null,
                  }
                }
              >
                Pellentesque ornare sem lacinia quam venenatis vestibulum.
              </h1>
              <div
                className="k-ProjectCard__line"
              >
                <span>
                  par 
                  <strong>
                    Bidules
                  </strong>
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  134
                </span>
                <span>
                  contributeurs
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  7 jours
                </span>
                <span>
                  restants
                </span>
              </div>
              <div
                className="k-ProjectCard__item"
              >
                <span>
                  9 930 €
                </span>
                <span>
                  sur 12 000 €
                </span>
              </div>
              <div
                className="k-ProjectCard__progress"
              >
                <div
                  aria-label="Progrès de la campagne"
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={55}
                  className="sc-jSMfEi giySqZ k-Meters-Progress"
                  role="progressbar"
                  style={
                    Object {
                      "--progress-color": "var(--color-primary-500, #1F93FF)",
                      "--progress-value": "55%",
                    }
                  }
                >
                  <div
                    className="k-Meters-Progress__ramp"
                  />
                </div>
                <span
                  className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                  style={Object {}}
                >
                  55
                   %
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="Page 2"
        className="k-u-reset-button k-CarouselNext__inner__button"
        onClick={[Function]}
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`<CarouselNext /> with itemsPerPage prop matches with snapshot 1`] = `
<div
  className="sc-dkzDqf kIdGjF k-CarouselNext"
  style={
    Object {
      "--carousel-gapBase": "2.5rem",
      "--carousel-itemsPerPage": 5,
      "--carousel-pagesCount": 0,
      "--carousel-shadowSize": null,
    }
  }
>
  <div
    className="k-CarouselNext__inner"
    onKeyDown={[Function]}
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  />
</div>
`;

exports[`<CarouselNext /> with loop prop on desktop matches with snapshot 1`] = `
<div
  className="sc-dkzDqf kIdGjF k-CarouselNext"
  style={
    Object {
      "--carousel-gapBase": "2.5rem",
      "--carousel-itemsPerPage": 3,
      "--carousel-pagesCount": 0,
      "--carousel-shadowSize": null,
    }
  }
>
  <div
    className="k-CarouselNext__inner"
    onKeyDown={[Function]}
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  />
</div>
`;

exports[`<CarouselNext /> with navigation on desktop matches with snapshot 1`] = `
Array [
  <div
    className="sc-gsnTZi ffkcFP k-CarouselNext__navigation"
  >
    <button
      className="sc-bczRLJ bqosxP k-Button k-CarouselNext__navigation__button k-Button--medium k-Button--nitrogen k-Button--fit-icon"
      style={
        Object {
          "--Button-border-radius": null,
          "--Button-bullet-color": null,
        }
      }
      type="button"
    >
      <span
        className="k-u-a11y-visuallyHidden"
      >
        Previous items
      </span>
      <svg
        aria-hidden={true}
        className=""
        fill="var(--color-grey-900, #222)"
        height="5.64"
        style={
          Object {
            "transform": "rotate(-90deg)",
          }
        }
        viewBox="0 0 8.48 5.64"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <path
          d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
        />
      </svg>
    </button>
    <button
      className="sc-bczRLJ bqosxP k-Button k-CarouselNext__navigation__button k-Button--medium k-Button--nitrogen k-Button--fit-icon"
      style={
        Object {
          "--Button-border-radius": null,
          "--Button-bullet-color": null,
        }
      }
      type="button"
    >
      <span
        className="k-u-a11y-visuallyHidden"
      >
        Next items
      </span>
      <svg
        aria-hidden={true}
        className=""
        fill="var(--color-grey-900, #222)"
        height="5.64"
        style={
          Object {
            "transform": "rotate(90deg)",
          }
        }
        viewBox="0 0 8.48 5.64"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <path
          d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
        />
      </svg>
    </button>
  </div>,
  <div
    className="sc-dkzDqf kIdGjF k-CarouselNext"
    style={
      Object {
        "--carousel-gapBase": "2.5rem",
        "--carousel-itemsPerPage": 3,
        "--carousel-pagesCount": 2,
        "--carousel-shadowSize": "1.25rem",
      }
    }
  >
    <div
      className="k-CarouselNext__inner"
      onKeyDown={[Function]}
      onScroll={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="k-CarouselNext__inner__pageContainer k-CarouselNext__inner__pageContainer--isActivePage k-CarouselNext__inner__pageContainer--hasBeenViewed"
      >
        <div
          className="k-CarouselNext__page k-CarouselNext__page--isActivePage k-CarouselNext__page--hasBeenViewed"
        >
          <div
            className="k-CarouselNext__page__item"
          >
            <div
              className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
              onFocus={[Function]}
            >
              <div
                className="k-ProjectCard__image"
              >
                <img
                  alt="image alt"
                  className="k-ProjectCard__image__image"
                  src="kitten.jpg"
                />
              </div>
              <div
                className="k-ProjectCard__content"
              >
                <div
                  className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
                >
                  Prolongation
                </div>
                <h1
                  className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                  style={
                    Object {
                      "--Title-css-color": null,
                    }
                  }
                >
                  The Office, la série culte décortiquée par S!CK
                </h1>
                <div
                  className="k-ProjectCard__line"
                >
                  <span>
                    par 
                    <strong>
                      Bidules
                    </strong>
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    134
                  </span>
                  <span>
                    contributeurs
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    7 jours
                  </span>
                  <span>
                    restants
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    9 930 €
                  </span>
                  <span>
                    sur 12 000 €
                  </span>
                </div>
                <div
                  className="k-ProjectCard__progress"
                >
                  <div
                    aria-label="Progrès de la campagne"
                    aria-valuemax={100}
                    aria-valuemin={0}
                    aria-valuenow={55}
                    className="sc-jSMfEi giySqZ k-Meters-Progress"
                    role="progressbar"
                    style={
                      Object {
                        "--progress-color": "var(--color-primary-500, #1F93FF)",
                        "--progress-value": "55%",
                      }
                    }
                  >
                    <div
                      className="k-Meters-Progress__ramp"
                    />
                  </div>
                  <span
                    className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                    style={Object {}}
                  >
                    55
                     %
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="k-CarouselNext__page__item"
          >
            <div
              className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--success k-ProjectCard--colorMode-light"
              onFocus={[Function]}
            >
              <div
                className="k-ProjectCard__image"
              >
                <img
                  alt="image alt"
                  className="k-ProjectCard__image__image"
                  src="kitten-1.jpg"
                />
              </div>
              <div
                className="k-ProjectCard__content"
              >
                <div
                  className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
                >
                  Prolongation
                </div>
                <h1
                  className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                  style={
                    Object {
                      "--Title-css-color": null,
                    }
                  }
                >
                  Pellentesque ornare sem lacinia quam venenatis vestibulum.
                </h1>
                <div
                  className="k-ProjectCard__line"
                >
                  <span>
                    par 
                    <strong>
                      Bidules
                    </strong>
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    134
                  </span>
                  <span>
                    contributeurs
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    7 jours
                  </span>
                  <span>
                    restants
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    9 930 €
                  </span>
                  <span>
                    sur 12 000 €
                  </span>
                </div>
                <div
                  className="k-ProjectCard__progress"
                >
                  <div
                    aria-label="Progrès de la campagne"
                    aria-valuemax={100}
                    aria-valuemin={0}
                    aria-valuenow={55}
                    className="sc-jSMfEi giySqZ k-Meters-Progress"
                    role="progressbar"
                    style={
                      Object {
                        "--progress-color": "var(--color-primary-500, #1F93FF)",
                        "--progress-value": "55%",
                      }
                    }
                  >
                    <div
                      className="k-Meters-Progress__ramp"
                    />
                  </div>
                  <span
                    className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                    style={Object {}}
                  >
                    55
                     %
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="k-CarouselNext__page__item"
          >
            <div
              className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
              onFocus={[Function]}
            >
              <div
                className="k-ProjectCard__image"
              >
                <img
                  alt="image alt"
                  className="k-ProjectCard__image__image"
                  src="kitten.jpg"
                />
              </div>
              <div
                className="k-ProjectCard__content"
              >
                <div
                  className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
                >
                  Prolongation
                </div>
                <h1
                  className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                  style={
                    Object {
                      "--Title-css-color": null,
                    }
                  }
                >
                  The Office, la série culte décortiquée par S!CK
                </h1>
                <div
                  className="k-ProjectCard__line"
                >
                  <span>
                    par 
                    <strong>
                      Bidules
                    </strong>
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    134
                  </span>
                  <span>
                    contributeurs
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    7 jours
                  </span>
                  <span>
                    restants
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    9 930 €
                  </span>
                  <span>
                    sur 12 000 €
                  </span>
                </div>
                <div
                  className="k-ProjectCard__progress"
                >
                  <div
                    aria-label="Progrès de la campagne"
                    aria-valuemax={100}
                    aria-valuemin={0}
                    aria-valuenow={55}
                    className="sc-jSMfEi giySqZ k-Meters-Progress"
                    role="progressbar"
                    style={
                      Object {
                        "--progress-color": "var(--color-primary-500, #1F93FF)",
                        "--progress-value": "55%",
                      }
                    }
                  >
                    <div
                      className="k-Meters-Progress__ramp"
                    />
                  </div>
                  <span
                    className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                    style={Object {}}
                  >
                    55
                     %
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="k-CarouselNext__inner__pageContainer"
      >
        <div
          className="k-CarouselNext__page"
        >
          <div
            className="k-CarouselNext__page__item"
          >
            <div
              className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--success k-ProjectCard--colorMode-light"
              onFocus={[Function]}
            >
              <div
                className="k-ProjectCard__image"
              >
                <img
                  alt="image alt"
                  className="k-ProjectCard__image__image"
                  src="kitten-1.jpg"
                />
              </div>
              <div
                className="k-ProjectCard__content"
              >
                <div
                  className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
                >
                  Prolongation
                </div>
                <h1
                  className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                  style={
                    Object {
                      "--Title-css-color": null,
                    }
                  }
                >
                  Pellentesque ornare sem lacinia quam venenatis vestibulum.
                </h1>
                <div
                  className="k-ProjectCard__line"
                >
                  <span>
                    par 
                    <strong>
                      Bidules
                    </strong>
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    134
                  </span>
                  <span>
                    contributeurs
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    7 jours
                  </span>
                  <span>
                    restants
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    9 930 €
                  </span>
                  <span>
                    sur 12 000 €
                  </span>
                </div>
                <div
                  className="k-ProjectCard__progress"
                >
                  <div
                    aria-label="Progrès de la campagne"
                    aria-valuemax={100}
                    aria-valuemin={0}
                    aria-valuenow={55}
                    className="sc-jSMfEi giySqZ k-Meters-Progress"
                    role="progressbar"
                    style={
                      Object {
                        "--progress-color": "var(--color-primary-500, #1F93FF)",
                        "--progress-value": "55%",
                      }
                    }
                  >
                    <div
                      className="k-Meters-Progress__ramp"
                    />
                  </div>
                  <span
                    className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                    style={Object {}}
                  >
                    55
                     %
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="k-CarouselNext__page__item"
          >
            <div
              className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--normal k-ProjectCard--colorMode-light"
              onFocus={[Function]}
            >
              <div
                className="k-ProjectCard__image"
              >
                <img
                  alt="image alt"
                  className="k-ProjectCard__image__image"
                  src="kitten.jpg"
                />
              </div>
              <div
                className="k-ProjectCard__content"
              >
                <div
                  className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
                >
                  Prolongation
                </div>
                <h1
                  className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 k-Title--septenary k-Title--noMargin"
                  style={
                    Object {
                      "--Title-css-color": null,
                    }
                  }
                >
                  The Office, la série culte décortiquée par S!CK
                </h1>
                <div
                  className="k-ProjectCard__line"
                >
                  <span>
                    par 
                    <strong>
                      Bidules
                    </strong>
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    134
                  </span>
                  <span>
                    contributeurs
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    7 jours
                  </span>
                  <span>
                    restants
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    9 930 €
                  </span>
                  <span>
                    sur 12 000 €
                  </span>
                </div>
                <div
                  className="k-ProjectCard__progress"
                >
                  <div
                    aria-label="Progrès de la campagne"
                    aria-valuemax={100}
                    aria-valuemin={0}
                    aria-valuenow={55}
                    className="sc-jSMfEi giySqZ k-Meters-Progress"
                    role="progressbar"
                    style={
                      Object {
                        "--progress-color": "var(--color-primary-500, #1F93FF)",
                        "--progress-value": "55%",
                      }
                    }
                  >
                    <div
                      className="k-Meters-Progress__ramp"
                    />
                  </div>
                  <span
                    className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                    style={Object {}}
                  >
                    55
                     %
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="k-CarouselNext__page__item"
          >
            <div
              className="sc-hKMtZM ckDyfm k-ProjectCard k-ProjectCard--success k-ProjectCard--colorMode-light"
              onFocus={[Function]}
            >
              <div
                className="k-ProjectCard__image"
              >
                <img
                  alt="image alt"
                  className="k-ProjectCard__image__image"
                  src="kitten-1.jpg"
                />
              </div>
              <div
                className="k-ProjectCard__content"
              >
                <div
                  className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
                >
                  Prolongation
                </div>
                <h1
                  className="sc-eCYdqJ fXbNLB k-Title k-ProjectCard__title k-u-clamp-2 custom className k-Title--septenary k-Title--noMargin"
                  style={
                    Object {
                      "--Title-css-color": null,
                    }
                  }
                >
                  Pellentesque ornare sem lacinia quam venenatis vestibulum.
                </h1>
                <div
                  className="k-ProjectCard__line"
                >
                  <span>
                    par 
                    <strong>
                      Bidules
                    </strong>
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    134
                  </span>
                  <span>
                    contributeurs
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    7 jours
                  </span>
                  <span>
                    restants
                  </span>
                </div>
                <div
                  className="k-ProjectCard__item"
                >
                  <span>
                    9 930 €
                  </span>
                  <span>
                    sur 12 000 €
                  </span>
                </div>
                <div
                  className="k-ProjectCard__progress"
                >
                  <div
                    aria-label="Progrès de la campagne"
                    aria-valuemax={100}
                    aria-valuemin={0}
                    aria-valuenow={55}
                    className="sc-jSMfEi giySqZ k-Meters-Progress"
                    role="progressbar"
                    style={
                      Object {
                        "--progress-color": "var(--color-primary-500, #1F93FF)",
                        "--progress-value": "55%",
                      }
                    }
                  >
                    <div
                      className="k-Meters-Progress__ramp"
                    />
                  </div>
                  <span
                    className="k-u-line-height-1 k-u-size-small k-u-weight-700 k-u-hidden@xs-down k-ProjectCard__progress__text"
                    style={Object {}}
                  >
                    55
                     %
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="Page 2"
          className="k-u-reset-button k-CarouselNext__inner__button"
          onClick={[Function]}
          type="button"
        />
      </div>
    </div>
  </div>,
]
`;
